--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script src="connector.js"></script>
 <script>
   var svg = d3.select("body").append("svg");
-  var p1 = [10,10], p2 = [300,80], p3 = [300,300], p4 = [10,220];
+  var p1 = [30,10], p2 = [300,80], p3 = [300,300], p4 = [30,120];
   var points = [p1,p2, p3,p4];
   var connectFn = svgConnector();
 
@@ -30,7 +30,7 @@
     .attr({
       width: 20,
       height: function(d,i) { return d[1][1] - d[0][1];},
-      x: function(d,i) { return i==0 ? d[0][0] - 20 : d[0][0]; },
+      x: function(d,i) { return i==0 ? d[0][0] : d[0][0]; },
       y: function(d,i) { return d[0][1]; },
       class: function(d,i) { return i==0 ? "left" : "right" }
         })
