--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 
 <h1 id="title">svg-connect-area</h1>
-<p>javascript library for creating join areas for four points</p>
+<p>Javascript library for creating join areas for four points</p>
+<p>Drag the grey handles around.</p>
+<a href="https://github.com/trinary/svg-connect-area">Github Project Here</a>
 
 <script id="live-reload" src="http://localhost:35729/livereload.js"></script>
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
